--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,18 +1,31 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: Laravel Deploy
+on:
+  push:
+    branches:
+      - '5-LaravelActions'
 jobs:
-  Explore-GitHub-Actions:
+  deploy:
+    name: build && push image to docker hub
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - uses: actions/checkout@v3
+        with:
+          ref: '5-LaravelActions'
+    
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v2
+    
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.PHILLIPE_DOCKER_USERNAME }}
+          password: ${{ secrets.PHILLIPE_DOCKER_ACCESS_TOKEN }}
+      
+      - name: build and push api
+        id: build-push-api
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: phillipebarreto1/laravel-app:latest
