--- a/laravel-app/docker-compose.yml
+++ b/laravel-app/docker-compose.yml
@@ -22,7 +22,7 @@ services:
             # You can use whatever password you like
             MYSQL_PASSWORD: ${DB_PASSWORD}
             # Password for root access
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
         ports:
             - '3306:3306'
         expose:
