--- a/laravel-app/docker-compose.yml
+++ b/laravel-app/docker-compose.yml
@@ -18,11 +18,12 @@ services:
         environment:
             MYSQL_DATABASE: ${DB_DATABASE}
             # So you don't have to use root, but you can if you like
-            MYSQL_USER: ${DB_USERNAME}
+            # MYSQL_USER: ${DB_USERNAME}
             # You can use whatever password you like
-            MYSQL_PASSWORD: ${DB_PASSWORD}
+            # MYSQL_PASSWORD: ${DB_PASSWORD}
             # Password for root access
             MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+            MYSQL_ALLOW_EMPTY_PASSWORD: "true"
         ports:
             - '3306:3306'
         expose:
