setup unit testing for the laravel app

--- a/laravel-app/Dockerfile
+++ b/laravel-app/Dockerfile
@@ -6,7 +6,7 @@ ENV APP_DEBUG=true
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Install System Dependencies
-RUN apt-get update && apt-get install git curl zip unzip php8.1 php8.1-common php8.1-mysql php8.1-xml php8.1-curl apache2 -y
+RUN apt-get update && apt-get install git curl zip unzip php8.1 php8.1-common php8.1-mysql php8.1-xml php8.1-curl php8.1-xdebug php8.1-sqlite php8.1-mbstring apache2 -y
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
@@ -21,6 +21,7 @@ COPY docker/apache/000-default.conf /etc/apache2/sites-available/000-default.con
 RUN php artisan config:cache && \
     php artisan route:cache && \
     chmod 777 -R /var/www/html/storage/ && \
+    chmod 777 -R /var/www/html/sqlite_db/ && \
     chown -R www-data:www-data /var/www/ && \
     a2enmod rewrite
 
